updated email on contact page

--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
                 Email
             </div> 
         
-            <div class="text-33">dananz@gmail.com</div>
+            <div class="text-33">chibuikenwankwod@gmail.com</div>
           </div>
           <div class="texts">
             <div class="title">
